<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorTextIcons"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/et_login_hint"
        android:inputType="textPersonName"
        android:shadowColor="@color/colorTextIcons"
        android:textColor="@color/colorTextIcons"
        android:textColorHint="@color/colorTextIcons" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/et_password_hint"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/colorTextIcons"
        android:textColorHint="@color/colorTextIcons" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="42dp"
        android:background="@color/colorPrimary"
        android:onClick="onLogin"
        android:text="@string/btn_login_text"
        android:textColor="@color/colorTextIcons" />

    <TextView
        android:id="@+id/linkForgetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tv_forget_password"
        android:textColor="@color/colorTextIcons"
        android:textSize="16dip" />

</LinearLayout>